Fix header spacing (#89)

--- a/src/pages/events/style.less
+++ b/src/pages/events/style.less
@@ -1,74 +1,80 @@
-@import "../../styles/colors.less";
-@import "../../styles/mixins.less";
+@import '../../styles/colors.less';
+@import '../../styles/mixins.less';
 
-.events-header {
-  .header();
-}
-.events-container {
-  height: 27em;
-  overflow: hidden;
-}
-.events:focus {
-  outline: none;
-}
-.events::-webkit-scrollbar {
-  display: none;
-}
 .events {
-  display: inline-flex;
-  height: fit-content;
-  overflow-y: hidden;
-  margin: 1em 0;
-  padding-left: 2em;
-  width: 100vw;
-  .event {
-    display: inline-block;
-    flex-shrink: 0; 
-    padding: 1.5em;
-    margin: 0.5em 1em;
-    box-shadow: 0em 0em 0.3em @black;
-    border-radius: 1em;
-    width: 15em; /* changes to width should also apply to handleWheel in index.tsx */
-    height: 20em;
-    white-space: normal;
-    overflow: hidden;
-    vertical-align: top;
-    .index0 {
-      color: @red;
-    }
-    .index1 {
-      color: @purple;
-    }
-    .index2 {
-      color: @blue;
-    }
-    .index3 {
-      color: @green;
-    }
-    .index4 {
-      color: @blue;
-    }
-    h1 {
-      font-size: 2.25em;
-      font-weight: bold;
-      margin-bottom: 0.5em;
-    }
-    h2 {
-      font-size: 1.75em;
-      font-weight: bold;
-      margin-bottom: 1em;
-    }
-    h3 {
-      font-size: 1.5em;
-      margin-bottom: 0.25em;
-      word-wrap: break-word;
-    }
-    .link {
-      color: @link-blue;
-    }
+  margin-bottom: 80px;
+
+  .header {
+    .header();
+    margin: 0 10vw;
   }
-  .end {
-    box-shadow: none;
+
+  .events-container {
+    height: 27em;
+    overflow: hidden;
+  }
+  .events:focus {
+    outline: none;
+  }
+  .events::-webkit-scrollbar {
+    display: none;
+  }
+  .events {
+    display: inline-flex;
+    height: fit-content;
+    overflow-y: hidden;
+    margin: 1em 0;
+    padding-left: 2em;
+    width: 100vw;
+    .event {
+      display: inline-block;
+      flex-shrink: 0;
+      padding: 1.5em;
+      margin: 0.5em 1em;
+      box-shadow: 0em 0em 0.3em @black;
+      border-radius: 1em;
+      width: 15em; /* changes to width should also apply to handleWheel in index.tsx */
+      height: 20em;
+      white-space: normal;
+      overflow: hidden;
+      vertical-align: top;
+      .index0 {
+        color: @red;
+      }
+      .index1 {
+        color: @purple;
+      }
+      .index2 {
+        color: @blue;
+      }
+      .index3 {
+        color: @green;
+      }
+      .index4 {
+        color: @blue;
+      }
+      h1 {
+        font-size: 2.25em;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+      }
+      h2 {
+        font-size: 1.75em;
+        font-weight: bold;
+        margin-bottom: 1em;
+      }
+      h3 {
+        font-size: 1.5em;
+        margin-bottom: 0.25em;
+        word-wrap: break-word;
+      }
+      .link {
+        color: @link-blue;
+      }
+    }
+    .end {
+      box-shadow: none;
+    }
   }
 }
 
