--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -1,7 +1,7 @@
 @import "../../styles/colors.less";
 
 .home-grid {
-  min-height: 80vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
